welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:2: error: Missing closing brace `}' assumed here
override def run()
^SnakeBuggle:2: error: expected start of definition
override def run()
         ^SnakeBuggle:4: error: expected class or object definition
baisseBrosse()
^SnakeBuggle:5: error: expected class or object definition
while (!fonctionTest())
^SnakeBuggle:6: error: expected class or object definition
{
^SnakeBuggle:29: error: expected class or object definition
def fonctionTest():Boolean =
^